--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,4 @@ SMTP_PORT=587
 SMTP_USER=your_email@example.com
 SMTP_PASSWORD=your_smtp_password
 SMTP_USE_TLS=true
+SITE_URL=http://127.0.0.1:5000
